--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: cadetblue;
+}
+
 .container{
     max-width: 800px;
     margin: 0 auto;
@@ -14,7 +18,23 @@ header{
     margin: 20px 0px;
 }
 
+img{
+    max-width: 100%;
+    border-radius: 15px;
+}
+
 .members-cards{
     display: grid;
+    row-gap: 30px;
+    column-gap: 15px;
     grid-template-columns: repeat(3, 1fr);
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    font-size: 18px;
+    font-weight: bold;
 }
