--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ img{
 .card__name{
     font-size: 20px;
     font-weight: bold;
+    text-shadow: 0px 7px 4px rgba(255, 255, 255, 0.3);
 }
 
 .card__role{
